# compass_data

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: ci.yml
compass_types/: Cargo.toml
compass_types/docs/: survey_format.md
compass_types/src/: common_types.rs  lib.rs  parser_utils.rs  project.rs  survey.rs
compass_types/src/project/: parser.rs
compass_types/src/survey/: parser.rs
compass_types/test_data/: project_file_examples
docs/: survey_format.md
examples/: load_sample_project.rs
src/: common_types.rs  error.rs  lib.rs  parser_utils.rs  project.rs  survey.rs
src/project/: mod.rs  parser.rs
src/survey/: mod.rs  parser.rs
test_data/: Fulfords.mak
