[package]
name = "compass_data"
version = "0.0.1"
edition = "2021"
authors = ["Zach Heylmun <zheylmun@gmail.com>"]
description = "A library for working with Compass cave survey data"
license = "MIT or Apache-2.0"
repository = "https://github.com/zheylmun/compass_data"


[dependencies]
nom = "7.1.3"
utm = "0.1.6"
thiserror = "1.0.29"

[dev-dependencies]
float_eq = "1"
